[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "triageforge"
version = "0.1.0"
description = "Local-first maintainer automation for repository health, issue triage, PR risk, and release notes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "theopensourcestudio" }]
keywords = ["github", "open-source", "maintainer", "issue-triage", "pull-request", "release-notes"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
ai = ["openai>=1.68.0"]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.14", "build>=1.2"]

[project.scripts]
triageforge = "triageforge.cli:main"

[project.urls]
Homepage = "https://github.com/theopensourcestudio/triageforge"
Issues = "https://github.com/theopensourcestudio/triageforge/issues"
Documentation = "https://github.com/theopensourcestudio/triageforge#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/triageforge"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["triageforge"]
